# partfs

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  fdisk_access.c  main.c  maintainer.mk  partfs.c
doc/: partfs.man
m4/: ax_define_dir.m4  ax_require_function.m4
man/: Makefile.am  partfs.1.in
po/: Makevars.in  POTFILES.in  en.po  partfs.pot  partfs.pot-header
src/: Makefile.am  fdisk_access.c  fdisk_access.h  maintainer.mk  partfs.c
src/test/: mount_options.test  reader.py
test/: mount_options.test  read.test  reader.py  taplib.sh  write.test  writer.py
